--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       context: .
       args:
         - DEV=true
-    ports: 
+    ports:
       - "8000:8000"
-    volumes: 
+    volumes:
       - ./app:/app
     command: >
       sh -c "python manage.py wait_for_db &&
@@ -21,15 +21,18 @@ services:
       - DB_PASS=changeme
     depends_on:
       - db
-  
+
   db:
     image: postgres:13-alpine
     volumes:
       - dev-db-data:/var/lib/postgresql/data
+    ports:
+      - 5434:5432
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
+      - POSTGRES_PORT=5434
 
 volumes:
-  dev-db-data:  
+  dev-db-data:
